# lexi-hub

./: .gitignore
gemini-balancer/: .gitignore  README.md  config.example.json  gemma_lowercase_model_report.json  gemma_model_report.json  idea.md  model_report.json  prompt.md  pyproject.toml
gemini-balancer/gemini_balancer/: __init__.py  balancer.py  cli.py
gemini-balancer/tests/: test_balancer.py  test_config_models_live.py
grammar-extract/: README.md  chunk_plan.md  idea.md  pyproject.toml
grammar-extract/Stanza-test/: fr_stanza_tense_mood_voice_test_sentences.txt  fr_stanza_tense_mood_voice_test_sentences_performance_review.md  fr_stanza_tense_mood_voice_test_sentences_report.md  fr_stanza_test_sentences.txt  fr_stanza_test_sentences_performance_review.md  fr_stanza_test_sentences_report.md
grammar-extract/reports/: french_stanza_tense_mood_report.md  idea_md_spacy_new_sentences_report.md  idea_md_spacy_report.md  idea_md_stanza_new_sentences_report.md  idea_md_stanza_report.md  idea_md_trankit_new_sentences_report.md  idea_md_trankit_new_sentences_report_failed.md  idea_md_trankit_report.md
grammar-extract/src/grammar_extract/: __init__.py  analyzer.py  cli.py  report.py  spacy_report.py  trankit_report.py
grammar-extract/tests/: test_analyzer.py  test_cli.py  test_report.py  test_spacy_report.py  test_stanza_integration.py  test_stanza_sentence_file_report.py  test_trankit_report.py
phrase-extract/: idea.md
phrase-extract/research/: FleLex_CRF.csv  idioms-runtime-dictionary.tsv  multi_word_phrases.txt
phrase-extract/research/FR-PARSEME/: README.md  (+6 more)
(+1 files in other folders)
